--- a/STABOFARM/templates/auth/auth.html
+++ b/STABOFARM/templates/auth/auth.html
@@ -50,7 +50,7 @@
     button {
       width: 100%;
       padding: 0.75rem;
-      background-color: #10b981;
+      background-color: #555555;
       color: white;
       font-weight: bold;
       border: none;
@@ -59,14 +59,14 @@
       transition: background 0.3s;
     }
     button:hover {
-      background-color: #059669;
+      background-color: #555555;
     }
     .toggle {
       text-align: center;
       margin-top: 1rem;
     }
     .toggle a {
-      color: #3b82f6;
+      color:#e97b14;
       text-decoration: none;
       font-weight: 600;
     }
@@ -74,34 +74,44 @@
 </head>
 <body>
   <div class="auth-container" id="login-form">
-    <h2>Ingia</h2>
+    <h2>Welcome Back</h2>
     <form>
-      <label for="login-email">Barua Pepe</label>
-      <input type="email" id="login-email" required>
+      <label for="login-email">Your Email Here</label>
+      <input type="email" id="login-email" name="email" required>
 
-      <label for="login-password">Nenosiri</label>
-      <input type="password" id="login-password" required>
+      <label for="login-password">Password</label>
+      <input type="password" id="login-password" name="password" required>
 
-      <button type="submit">Ingia</button>
+      <button type="submit">Login</button>
       <div class="toggle">
-        <p>Huna akaunti? <a href="#" onclick="toggleForms('signup')">Jisajili hapa</a></p>
+        <p>Have an Account? Click <a href="#" onclick="toggleForms('signup')">Here</a></p>
+        <p>Forgot Password Click? <a href="#">Here</a></p>
       </div>
     </form>
   </div>
 
   <div class="auth-container" id="signup-form" style="display: none;">
-    <h2>Jisajili</h2>
+    <h2>Welcome To StaboFarm</h2>
     <form>
-      <label for="signup-name">Jina Kamili</label>
-      <input type="text" id="signup-name" required>
+      <label for="first_name">First Name</label>
+      {{form.first_name}}
 
-      <label for="signup-email">Barua Pepe</label>
-      <input type="email" id="signup-email" required>
+      <label for="last_name">Last Name</label>
+      {{form.first_name}}
 
-      <label for="signup-password">Nenosiri</label>
-      <input type="password" id="signup-password" required>
+      <label for="email">Email Here</label>
+      {{form.email}}
+      <label for="phone_number">Phone Number</label>
+      {{form.phone_number}}
 
-      <button type="submit">Jisajili</button>
+
+      <label for="password">password</label>
+      <input type="password" id="password" required>
+
+      <label for="confirm_password">Confirm Password</label>
+      <input type="password" id="confirm_password" required>
+
+      <button type="submit">Register</button>
       <div class="toggle">
         <p>Tayari una akaunti? <a href="#" onclick="toggleForms('login')">Ingia hapa</a></p>
       </div>
