added the user dashboard

--- a/STABOFARM/templates/auth/resetPassword.html
+++ b/STABOFARM/templates/auth/resetPassword.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StaboFarm | Register & Login</title>
+  <title>StaboFarm | Reset Password</title>
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/imgs/favicon.png' %}">
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -78,66 +78,21 @@
 <body>
   {% include "main/alter.html" %}
   <div class="auth-container" id="login-form">
-    <h2>Welcome Back</h2>
-    <form action="{% url 'login' %}" method="POST">
+    <h2>Reset Your Password</h2>
+    <form action="{% url 'forgotPassword' %}" method="POST">
       {% csrf_token %}
-      <label for="login-email">Your Email Here</label>
-      <input type="email" id="login-email" name="email" required>
-
-      <label for="login-password">Your Password</label>
-      <input type="password" id="login-password" name="password" required>
-
-      <button type="submit">Login</button>
-      <div class="toggle">
-        <p>Don't have an Account? Click <a href="#" onclick="toggleForms('signup')">Here</a></p>
-        <p>Forgot Your Password? Click <a href="{% url 'forgotPassword' %}">Here</a></p>
-      </div>
-    </form>
-  </div>
-
-  <div class="auth-container" id="signup-form" style="display: none;">
-    <h2>Welcome to StaboFarm</h2>
-    <form action="{% url 'register' %}" method="POST">
-      {% csrf_token %}
-      <label for="first_name">Fist Name</label>
-      <input type="text" id="first_name" name="first_name" required>
-
-      <label for="last_name">Last Name</label>
-      <input type="text" id="last_name" name="last_name" required>
-
-      <label for="email">Your Email Here</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="phone_number">Your Phone Number</label>
-      <input type="text" id="phone_number" name="phone_number" required>
-      
-      <label for="password">Password Here</label>
+      <label for="password">New Password</label>
       <input type="password" id="password" name="password" required>
 
       <label for="confirm_password">Confirm Password</label>
       <input type="password" id="confirm_password" name="confirm_password" required>
 
-
-      <button type="submit">SignUp</button>
+      <button type="submit">Reset</button>
       <div class="toggle">
-        <p>You have an Account? Click  <a href="#" onclick="toggleForms('login')">Here</a></p>
+        <p>Remember Your Password? Click <a href="{% url 'login' %}">Here</a></p>
       </div>
     </form>
   </div>
 
-  <script>
-    function toggleForms(form) {
-      const loginForm = document.getElementById('login-form');
-      const signupForm = document.getElementById('signup-form');
-
-      if (form === 'signup') {
-        loginForm.style.display = 'none';
-        signupForm.style.display = 'block';
-      } else {
-        loginForm.style.display = 'block';
-        signupForm.style.display = 'none';
-      }
-    }
-  </script>
 </body>
 </html>
