--- a/STABOFARM/templates/store/index.html
+++ b/STABOFARM/templates/store/index.html
@@ -2645,8 +2645,8 @@
                   <div class="support-item">
                      <div class="support-content">
                         <h3>Exclusive offers for you</h3>
-                        <p>Get weekly deals, valuable health information and more.</p>
-                        <a class="join-btn furniture-btn" href="auth.html">sing up<span><i
+                        <p>Get weekly deals, valuable Support information and more.</p>
+                        <a class="join-btn furniture-btn" href="{% url 'login' %}">sing up<span><i
                                  class="fa-regular fa-angle-right"></i></span></a>
                      </div>
                   </div>
@@ -2655,7 +2655,7 @@
                   <div class="support-item is-light-yellow">
                      <div class="support-content">
                         <h3>Join Our Community</h3>
-                        <p>Get weekly deals, valuable health information and more.</p>
+                        <p>Get weekly deals, valuable Support information and more.</p>
                         <a class="join-btn furniture-btn" href="farm_info.html">Join FREE now<span><i
                                  class="fa-regular fa-angle-right"></i></span></a>
                      </div>
