--- a/STABOFARM/templates/main/dashboard_side.html
+++ b/STABOFARM/templates/main/dashboard_side.html
@@ -60,6 +60,7 @@
               <li class="nav-item"><a href="{% url 'category_create' %}" class="nav-link dropdown-link">New Category</a></li>
               <li class="nav-item"><a href="{% url 'category_list' %}" class="nav-link dropdown-link">Categories List</a></li>
               <li class="nav-item"><a href="{% url 'product_list' %}" class="nav-link dropdown-link">My Products</a></li>
+              <li class="nav-item"><a href="" class="nav-link dropdown-link">Pre Havesty</a></li>
             </ul>
           </li>
 
