--- a/STABOFARM/templates/store/create_product.html
+++ b/STABOFARM/templates/store/create_product.html
@@ -76,7 +76,16 @@
                     </label>
                     <span class="switch-label">Available for Sale</span>
                 </div>
+                <div class="form-group">
+                    <label for="shop">{{form.shop.lable}}</label>
+                    {{ form.shop }}
+                </div>
             </div>
+        </div>
+        <div>
+            {% for error in form.errors %}
+            <li>{{error}}</li>
+            {% endfor %}
         </div>
 
         <div class="form-actions">
